[package]
name = "moqayada"
version = "0.1.0"
description = "Moqayada: Decentralized virtual land marketplace built on Solana using the Anchor framework."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "moqayada"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token"] }